# CSnakeGame

./: CMakeLists.txt  SoundPlayer.c  SoundPlayer.h  food.h  gameover.h  main.c  move.h  snake.c  snake.h  vcpkg.json
.github/workflows/: build.yml
